--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -304,7 +304,7 @@ footer {
     border-radius: 0.4rem;
     padding: clamp(0.5rem, 1.5vw, 0.8rem) clamp(1rem, 3vw, 1.5rem);
     cursor: pointer;
-    font-weight: 600;
+    font-weight: 100;
     transition: background 0.3s, transform 0.2s;
 }
 
@@ -416,4 +416,11 @@ footer {
         font-size: clamp(1.2rem, 4vw, 2rem);
         margin-left: 0.5rem;
     }
+    .dropdown-content {
+        min-width: clamp(80px, 40vw, 200px);
+    }
+    .dropdown-content a {
+    padding: clamp(0.6rem, 1.5vw, 0.8rem) clamp(0.8rem, 2vw, 1rem);
+    font-size: clamp(1.4rem, 2vw, 2rem);
+}
 }
